# QmlGomulu

./: CMakeLists.txt  README.md  main.cpp  main.qml
Screens/: mainScreen.qml
Screens/Panels/: connectionPanel.qml  ledKontrolInnerPanel.qml  mainMenuPanel.qml  motorDial.qml  motortakip.qml  tempInnerPanel.qml
Screens/classes/: degiskenler.h  screenhandler.cpp  screenhandler.h  uartconnection.cpp  uartconnection.h
